--- a/AutoHostfileSettings/AutoHostfileSettings.resx
+++ b/AutoHostfileSettings/AutoHostfileSettings.resx
@@ -422,6 +422,9 @@
     <value>The friendly name will be visible to other computers and defaults to the Windows hostname.  Port and shared key should be set the same on all machines in your network allowing them to communicate in an encrypted way.
 </value>
   </data>
+  <metadata name="validationErrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAgAEBAAAAEAIABoBAAAhgAAABgYAAABACAAiAkAAO4EAAAgIAAAAQAgAKgQAAB2DgAAMDAAAAEA
